--- a/src/main/resources/templates/board/edit.html
+++ b/src/main/resources/templates/board/edit.html
@@ -8,8 +8,8 @@
 <body>
 <header th:insert="common/header.html"></header>
 <div class="container">
-    <form th:action="@{'/post/edit/' + ${post.id}}" method="put">
-        <input type="hidden" name="_method" value="patch" />
+    <form th:action="@{'/post/edit/' + ${post.id}}" method="post">
+        <input type="hidden" name="_method" value="put" />
         <input type="hidden" name="id" th:value="${post.id}" />
         <div class="form-group row">
             <label for="inputTitle" class="col-sm-2 col-form-label"><strong>제목</strong></label>
